--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,11 @@
 
 .navbar-lewagon .navbar-collapse {
   position: fixed;
-  inset: 66px 0px 0px;
+  // inset: 66px 0px 0px;
+  top: 66px;
+  left: 0px;
+  right:0px;
+  bottom:0px;
   z-index: 1;
   background-color: white;
   transform: translateX(0%);
